...
      notificationViewModel = notificationViewModel,
      authenticator = authenticator,
      includeBackButton = false,
      topBarTitle = stringResource(R.string.my_profile),
      floatingActionButton = {
        ExtendedFloatingActionButton(
            modifier = Modifier.testTag("editProfileButton"),
            onClick = { navigationActions.navigateTo(Screen.EDIT_PROFILE) }) {
              Row {
                Icon(Icons.Default.Create, contentDescription = "Edit Profile")
                Spacer(modifier = Modifier.width(8.dp))
                Text(stringResource(R.string.edit_profile))
              }
...
    topBarTitle: String = stringResource(R.string.public_profile),
    floatingActionButton: @Composable () -> Unit = {},
    onSendMessageClick: () -> Unit = {},
    content: @Composable () -> Unit,
) {
  Scaffold(
      modifier = Modifier.testTag("profileScaffold"),
      floatingActionButton = floatingActionButton,
      bottomBar = { BottomNavigationBarWithDivider(navigationActions) },
      topBar = {
        TopProfileBar(
            title = topBarTitle,
            navigationActions = navigationActions,
...
      content = { paddingValues ->
        Column(
            modifier =
                Modifier.fillMaxSize()
                    .padding(paddingValues)
                    .verticalScroll(rememberScrollState())
                    .testTag("profileScaffoldColumn"),
            verticalArrangement = Arrangement.Center,
            horizontalAlignment = Alignment.CenterHorizontally) {
              content()
            }
      })
}
...
  val following: MutableState<List<User>> = remember { mutableStateOf(listOf()) }
  val followers: MutableState<List<User>> = remember { mutableStateOf(listOf()) }
  val profilePictureUri = remember { mutableStateOf("") }

  // Display the user's profile information:
  if (user.value == null) {
    Text(stringResource(R.string.user_not_found_2), modifier = Modifier.testTag("userNotFound"))
  } else {
    ElevatedCard(
        modifier = Modifier.fillMaxSize().padding(40.dp).testTag("profileCard"),
        colors =
            CardDefaults.cardColors(containerColor = MaterialTheme.colorScheme.surfaceVariant)) {
          val borderPadding = 20.dp
          Column(
              modifier =
                  Modifier.padding(borderPadding).fillMaxWidth().testTag("profileCardColumn"),
              verticalArrangement = Arrangement.Center,
              horizontalAlignment = Alignment.CenterHorizontally) {

                // Profile picture
                NonModifiableProfilePicture(user, profilePictureUri, fileViewModel)

...
                // Display the user's full name and handle (username)
                Row {
                  Icon(Icons.Default.AccountCircle, "profileIcon")
                  Text(
                      user.value!!.fullName(),
                      fontWeight = FontWeight(500),
                      modifier = Modifier.testTag("userFullName"))
                }
                Spacer(modifier = Modifier.height(5.dp))
                Text(
                    user.value!!.userHandle(),
                    fontWeight = FontWeight(400),
                    fontStyle = FontStyle.Italic,
                    modifier = Modifier.alpha(0.7f).testTag("userHandle"))
                Spacer(modifier = Modifier.height(10.dp))

                // Display the user's date of joining and rating
                Row {
                  Icon(Icons.Default.Star, "starIcon")
                  Text(
                      stringResource(R.string.rating, user.value!!.rating),
                      modifier = Modifier.testTag("userRating"))
                }
                Spacer(modifier = Modifier.height(10.dp))
                Row {
                  Icon(Icons.Default.DateRange, "dateIcon")
                  Text(
                      stringResource(R.string.member_since, user.value!!.dateToString()),
                      modifier = Modifier.testTag("userDateOfJoining"))
                }
                Spacer(modifier = Modifier.height(10.dp))

                // Display the user's bio
                if (user.value!!.bio.isNotEmpty()) {
                  DisplayBioCard(user)
                  Spacer(modifier = Modifier.height(10.dp))
                }

                // Display the number of following and followers on clickable buttons
                Row {
                  OutlinedButton(
                      modifier = Modifier.testTag("followingButton"),
                      onClick = {
                        userViewModel.getFollowingFrom(
                            user.value!!.uid,
                            {
                              following.value = it
                              isFollowingMenuShown.value = true
                            },
                            { isFollowingMenuShown.value = false })
                      }) {
                        Text(
                            stringResource(R.string.following, user.value!!.friends.following.size),
                            modifier = Modifier.testTag("followingText"))
                      }
                  Spacer(modifier = Modifier.width(10.dp))
                  OutlinedButton(
                      modifier = Modifier.testTag("followersButton"),
                      onClick = {
                        userViewModel.getFollowersFrom(
                            user.value!!.uid,
                            {
                              followers.value = it
                              isFollowerMenuShown.value = true
                            },
                            { isFollowerMenuShown.value = false })
                      }) {
                        Text(
                            stringResource(R.string.followers, user.value!!.friends.followers.size),
                            modifier = Modifier.testTag("followersText"))
                      }
                }
                // Display bottom sheets for the user's following and followers
                UserBottomSheet(
                    expanded = isFollowingMenuShown,
                    users = following,
...
          }
          // Add the user's bio in italics
          withStyle(style = SpanStyle(fontStyle = FontStyle.Italic, fontSize = 14.sp)) {
            append(user.value!!.bio)
          }
        },
        modifier = Modifier.padding(10.dp).testTag("userBio"))
  }
}

/**
 * Displays a logout button.
 *
...
