...
@Composable
fun NonModifiableProfilePicture(
    user: State<User?>,
    profilePictureUri: MutableState<String>,
    fileViewModel: FileViewModel,
    size: Int = 150,
    testTag: String = "profilePicture",
    onClick: (() -> Unit)? = null
) {
  val boxModifier = Modifier.size(size.dp)
  Box(modifier = onClick?.let { boxModifier.clickable { onClick() } } ?: boxModifier) {
    val painter =
        if (compareUID(
...
