...
  var lastName by remember { mutableStateOf("") }
  var userName by remember { mutableStateOf("") }
  var userNameError by remember { mutableStateOf(false) }
  val context = LocalContext.current

  Scaffold(
      modifier = Modifier.testTag("addUserScreen"),
      topBar = {
        TopAppBar(
            title = {},
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() }, Modifier.testTag("goBackButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
                        contentDescription = "Back")
                  }
            })
      },
...
                  value = firstName,
                  onValueChange = { firstName = it },
                  label = { Text("First Name") },
                  modifier =
                      Modifier.fillMaxWidth(0.8f)
                          .padding(vertical = 8.dp)
                          .testTag("inputFirstName"))

              OutlinedTextField(
                  value = lastName,
                  onValueChange = { lastName = it },
                  label = { Text("Last Name") },
                  modifier =
                      Modifier.fillMaxWidth(0.8f).padding(vertical = 8.dp).testTag("inputLastName"))

              OutlinedTextField(
                  value = userName,
                  onValueChange = { userName = it },
                  label = { Text("* User Name") },
                  isError = userNameError,
                  modifier =
                      Modifier.fillMaxWidth(0.8f).padding(vertical = 8.dp).testTag("inputUserName"))

              // Save Button
              Button(
                  onClick = {
                    val user =
                        User(
...
                              exception is UserRepositoryFirestore.UsernameTakenException
                        })
                  },
                  modifier =
                      Modifier.fillMaxWidth(0.8f)
                          .padding(vertical = 16.dp)
                          .testTag("createUserButton"),
                  // Disable the button if the user name is empty
                  enabled = userName.isNotBlank()) {
                    Text("Save")
                  }
            }
      })
...
